
main.jsp
----------------------
* Added missing call to maven.xsl.

ModificationSet
----------------------
* Added requiremodification attribute. Useful for building even when no modifications are found.

Project
----------------------
* Fixed a bug where value of buildForced was not being reset if modifications were found.

Schedule
----------------------
* Fixed a bug where checkPauseBuilders would not return a value larger than one day.
* Fixed a bug where chained pauses where not respected, with builds happening after the end of the first pause and during the second.
* Changed schedule to ignore the value of interval when there are only time based builds. This should get rid of most of the "No Builder selected" messages.
* Fixed a bug where no builder was selected on a forced build if all the builders were time based.
* Fixed a bug where time builders set for midnight would build later in the day
* Fixed a bug where a schedule with only time builds would not select a builder on a forced build if the next scheduled build time was during a pause.

Subversion
----------------------
* Added Subversion and SubversionBootstrapper - Submitted by Etienne Studer

Vss
----------------------
* Fixed a bug where a label in a root directory was showing up as a modification.

CruiseControl Release Notes - 2.1.3

log4j.properties
----------------------
* Fixed bug where the month was being used in place of minutes.
* Now using abbreviation of month name rather than month number.

MavenBuilderTest
----------------------
* Fixed bug trying to chmod test file on unix. - Patch by Andy Nguyen

unittests.xsl & testdetails.xsl
----------------------
* Will now work with merged junitreport xml output in addition to individual xml result files. - Fixed by Jason Yip

CruiseControl Release Notes - 2.1.2

AntBuilder
----------------------
* Fixed a bug in isWindows() that was returning false negatives. This would prevent antScript from working on some Windows systems.
